Added .env support, and update README with usage and trade-offs

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           check_together: true
         env:
-          SHELLCHECK_OPTS: -e SC2086
+          SHELLCHECK_OPTS: -e SC2086 -e SC1091
 
       - name: Validate docker compose config
         run: docker compose config
